k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-practice
  labels:
    app: springboot-practice
spec:
  selector:
    app: springboot-practice
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
